--- a/PIA/PIA.csproj
+++ b/PIA/PIA.csproj
@@ -60,9 +60,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="FirebaseAdmin" Version="3.0.1" />
+	  <PackageReference Include="Firebase.Auth" Version="1.0.0" />
+	  <PackageReference Include="Firebase.Database" Version="1.0.0" />
+	  <PackageReference Include="FirebaseAdmin" Version="2.10.0" />
 	  <PackageReference Include="FirebaseAuthentication.net" Version="4.1.0" />
-	  <PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
+	  <PackageReference Include="FireSharp" Version="2.0.4" />
+	  <PackageReference Include="Google.Apis.Auth" Version="1.67.0" />
 	</ItemGroup>
 
 	<ItemGroup>
